public/client/assets/css/style.css
/* ... */
.offcanvas.hover-style-medical .offcanvas-userpanel ul li.offcanvas-userpanel__role ul.user-sub-menu li a:hover {
    color: #0bbfbd
}

.offcanvas .offcanvas-userpanel ul li.offcanvas-userpanel__role ul.user-sub-menu li a:hover {
    color: #7AAACE
}

.offcanvas .offcanvas-userpanel ul li.offcanvas-userpanel__role ul.user-sub-menu li a.current {
    color: #7AAACE
}

.offcanvas.hover-style-cosmatics .offcanvas-userpanel ul li.offcanvas-userpanel__role ul.user-sub-menu a.current {
    color: #c0b07d
}

.offcanvas.hover-style-electronic .offcanvas-userpanel ul li.offcanvas-userpanel__role ul.user-sub-menu a.current {
    color: #0090f0
}

.offcanvas.hover-style-furniture .offcanvas-userpanel ul li.offcanvas-userpanel__role ul.user-sub-menu a.current {
    color: #ef1e1e
}

.offcanvas.hover-style-medical .offcanvas-userpanel ul li.offcanvas-userpanel__role ul.user-sub-menu a.current {
    color: #0bbfbd
}

.offcanvas .menu-close {
    background: #333;
    color: #fff;
    line-height: 40px;
    height: 40px;
    padding: 0 20px;
    font-size: 16px;
    font-weight: 600;
    text-transform: uppercase;
    pointer-events: none;
    position: relative
}

.offcanvas .menu-close i {
    position: absolute;
    right: 20px;
    top: 50%;
    margin-top: -12px;
    font-size: 24px
}

.home-medical.home-19 .mobile-view-color .item-quantity-tag {
    background: #0bbfbd !important;
    color: #fff !important
}

.home-medical.home-19 .mobile-view-color .color-black {
    color: #253237
}

.home-medical.home-19 .mobile-view-color .color-black:hover {
    color: #0bbfbd
}

.filter-active a {
    font-weight: 400;
    font-size: 16px;
    color: #888;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    text-transform: capitalize
}

.filter-active {
    max-width: 10%;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 10%;
    flex: 0 0 10%;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    justify-content: flex-end
}

.filter-page .shop-tab.nav {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%
}

@media only screen and (min-width: 992px) and (max-width: 1169px) {
    .filter-page .select-shoing-wrap {
        -webkit-box-flex: 0;
        -ms-flex: 0 0 40%;
        flex: 0 0 40%;
        max-width: 40%
    }
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
    .filter-page .select-shoing-wrap {
        -webkit-box-flex: 0;
        -ms-flex: 0 0 40%;
        flex: 0 0 40%;
        max-width: 40%
    }
}

@media only screen and (max-width: 767px) {
    .filter-active {
        margin-top: 15px;
        max-width: 20%;
        -webkit-box-flex: 0;
        -ms-flex: 0 0 20%;
        flex: 0 0 20%;
        -webkit-box-pack: start;
        -ms-flex-pack: start;
        justify-content: flex-start
    }

    .shop-top-bar {
        padding: 20px 30px
    }

    .filter-page .shop-tab.nav {
        -webkit-box-flex: 0;
        -ms-flex: 0 0 100%;
        flex: 0 0 100%;
        max-width: 100%
    }
}

.filter-active a i {
    font-size: 12px;
    margin-right: 5px
}

.filter-active a:hover {
    color: #4fb68b
}

.product-filter-wrapper {
    background-color: #fff;
    border: 1px solid #ebebeb;
    margin-bottom: 40px;
    padding: 45px 45px 40px;
    display: none;
    border-radius: 5px
}

.sidebar-widget-tags a {
    color: #555;
    font-weight: 500;
    line-height: 28px
}

.contact-info a {
    font-weight: 700
}

.contact-info a:hover {
    color: #7AAACE
}

.hover-style-medical .contact-info a:hover {
    color: #0bbfbd
}

.hover-style-cosmatics .contact-info a:hover {
    color: #c0b07d
}

.hover-style-electronic .contact-info a:hover {
    color: #0090F0
}

.hover-style-furniture .contact-info a:hover {
    color: #ef1e1e
}



/* Product Card Aspect Ratio & Height Normalization (REQ-184) */
article.list-product {
    display: flex !important;
    flex-direction: column !important;
    height: 100% !important;
}

article.list-product .img-block {
    aspect-ratio: 1 / 1 !important;
    width: 100% !important;
    overflow: hidden !important;
}

article.list-product .img-block img {
    width: 100% !important;
    height: 100% !important;
    object-fit: cover !important;
}

article.list-product .product-decs {
    flex-grow: 1 !important;
    display: flex !important;
    flex-direction: column !important;
}

article.list-product .pricing-meta {
    margin-top: auto !important;
}

/* Specific Fix for Featured/Stacked Horizontal Sliders */
.feature-slider-item .list-product {
    display: block !important;
    height: auto !important;
    padding: 20px !important;
    background: #fff !important;
}

.feature-slider-item .img-block {
    float: left !important;
    width: 120px !important;
    margin-right: 20px !important;
    aspect-ratio: 1 / 1 !important;
}

.feature-slider-item .product-decs {
    display: block !important;
    overflow: hidden !important;
    padding: 0 !important;
}

.feature-slider-item .pricing-meta {
    margin-top: 10px !important;
}

.feature-slider-item .add-to-link {
    display: none !important;
}

/* Specific Fix for Shop List View (REQ-194) */
.shop-list-wrap .list-product {
    display: flex !important;
    flex-direction: row !important;
    height: auto !important;
    padding: 20px !important;
    background: #fff !important;
    border: 1px solid #ebebeb !important;
    border-radius: 5px !important;
}
/* ... */

